# splitter

./: .gitlab-ci.yml  Cargo.toml  README.md  test.db  testfile.yml
src/: config.rs  db_connect.rs  db_init.sql  db_structure.sql  error.rs  group.rs  logging.rs  logic.rs  main.rs  money.rs  split_logic.rs  test_db_connect.rs
tests/: cli_test.rs
