[package]
name = "splitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brotli = "3.4.0"
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
dirs = "5.0.1"
regex = "1.9.6"
serde = { version = "1.0.192", features = ["derive"] }
serde_yaml = "0.9.27"
